--- a/style.css
+++ b/style.css
@@ -137,11 +137,16 @@ body {
 .main-container {
   margin: 5% 10% 0 10%;
 }
+@media (max-width: 768px) {
+  .main-container {
+    margin: 0;
+  }
+}
 .main-container .header {
   display: flex;
   color: white;
   gap: 2rem;
-  height: 100%;
+  height: auto;
 }
 .main-container .header h1 {
   font-size: 56px;
@@ -156,7 +161,8 @@ body {
 }
 @media (max-width: 768px) {
   .main-container .header .left {
-    width: 100%;
+    width: 80%;
+    margin: 0 10%;
   }
 }
 .main-container .header .left .text {
@@ -215,9 +221,14 @@ body {
     position: absolute;
     overflow: hidden;
     height: 0;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.5);
     transition: 0.5s ease;
     width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .main-container .header .right .overlay-hidden .text {
+    padding: 10px;
   }
 }
 @media (max-width: 768px) {
@@ -243,5 +254,101 @@ body {
     margin: 5% 0;
     padding: 10px 20px;
     font-weight: 600;
+    color: black;
   }
+}
+.main-container .know-more {
+  color: white;
+  margin-top: 5rem;
+  display: flex;
+  height: auto;
+}
+@media (max-width: 768px) {
+  .main-container .know-more {
+    width: 80%;
+    margin: 0 10%;
+    margin-top: 3rem;
+    display: block;
+  }
+}
+.main-container .know-more .left {
+  width: 50%;
+  line-height: 1.5rem;
+}
+@media (max-width: 768px) {
+  .main-container .know-more .left {
+    width: 100%;
+  }
+}
+.main-container .know-more .left .top {
+  display: flex;
+  align-items: center;
+}
+.main-container .know-more .left .top span {
+  color: #ffc492;
+}
+.main-container .know-more .left .top .line {
+  width: 3rem;
+  height: 1px;
+  margin-left: 1rem;
+  background-color: #fff;
+}
+.main-container .know-more .left h1 {
+  margin-top: 2rem;
+}
+.main-container .know-more .left .mid {
+  gap: 1rem;
+  display: flex;
+  margin-top: 1.5rem;
+}
+@media (max-width: 768px) {
+  .main-container .know-more .left .mid {
+    display: block;
+  }
+}
+@media (max-width: 768px) {
+  .main-container .know-more .left .mid .item {
+    margin-top: 2rem;
+  }
+}
+.main-container .know-more .left .mid .item h3 {
+  color: #b0eff1;
+}
+.main-container .know-more .left .mid .item .bi {
+  color: #ffc492;
+}
+.main-container .know-more .left .mid p {
+  margin-top: 1rem;
+}
+.main-container .know-more .left button {
+  margin-top: 2rem;
+  border: none;
+  background-color: #ffc492;
+  padding: 10px 20px;
+  font-weight: 600;
+}
+.main-container .know-more .right {
+  display: flex;
+  width: 50%;
+  justify-content: end;
+  gap: 2rem;
+}
+@media (max-width: 768px) {
+  .main-container .know-more .right {
+    width: 80%;
+    margin: 0 10%;
+    justify-content: center;
+  }
+}
+.main-container .know-more .right img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 768px) {
+  .main-container .know-more .right img {
+    width: 50%;
+  }
+}
+.main-container .know-more .right .special {
+  margin-top: 5rem;
 }/*# sourceMappingURL=style.css.map */
