--- a/style.scss
+++ b/style.scss
@@ -140,11 +140,14 @@ body {
 }
 .main-container {
   margin: 5% 10% 0 10%;
+  @media (max-width:768px) {
+    margin: 0;
+  }
   .header {
     display: flex;
     color: white;
     gap: 2rem;
-    height: 100%;
+    height: auto;
 
     h1 {
       font-size: 56px;
@@ -155,7 +158,8 @@ body {
     .left {
       width: 50%;
       @media (max-width: 768px) {
-        width: 100%;
+        width: 80%;
+        margin: 0 10%;
       }
       .text {
         margin: 10% 0;
@@ -209,13 +213,13 @@ body {
           position: absolute;
           overflow: hidden;
           height: 0;
-          background-color: gray;
+          background-color: rgba(128, 128, 128, 0.5);
           transition: .5s ease;
           width: 100%;
         }
         .text{
           @media (max-width: 768px) {
-
+            padding: 10px;
           }
         }
       }
@@ -242,7 +246,94 @@ body {
           margin: 5% 0;
           padding: 10px 20px;
           font-weight: 600;
+          color: black;
         }
+      }
+    }
+  }
+  .know-more{
+    color: white;
+    margin-top: 5rem;
+    display: flex;
+    height: auto;
+    @media (max-width:768px) {
+      width: 80%;
+      margin: 0 10%;
+      margin-top: 3rem;
+      display: block;
+    }
+    .left{
+      width: 50%;
+      line-height: 1.5rem;
+      @media (max-width:768px) {
+        width: 100%;
+      }
+      .top{
+        display: flex;
+        align-items: center;
+        span{
+          color: #ffc492;
+        }
+        .line{
+          width: 3rem;
+          height: 1px;
+          margin-left: 1rem;
+          background-color: #fff;
+      
+        }
+      }
+      h1{
+        margin-top: 2rem;
+      }
+      .mid{
+        gap: 1rem;
+        display: flex;
+        margin-top: 1.5rem;
+        @media (max-width:768px) {
+          display: block;
+        }
+        .item{
+          @media (max-width:768px) {
+            margin-top: 2rem;
+          }
+          h3{
+            color: #b0eff1;
+          }
+          .bi{
+            color: #ffc492;
+          }
+        }
+        p{
+          margin-top: 1rem;
+        }
+      }
+      button {
+        margin-top: 2rem;
+        border: none;
+        background-color: #ffc492;
+        padding: 10px 20px;
+        font-weight: 600;
+      }
+    }
+    .right{
+      display: flex;
+      width: 50%;
+      justify-content: end;
+      gap: 2rem;
+      @media (max-width:768px) {
+        width: 80%;
+        margin: 0 10%;
+        justify-content: center;
+      }
+      img{
+        object-fit: contain;
+        @media (max-width:768px) {
+          width: 50%;
+        }
+      }
+      
+      .special{
+        margin-top: 5rem;
       }
     }
   }
