--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ body {
   background-color: #ffc492;
   padding: 10px 20px;
   font-weight: 600;
+  color: black;
 }
 .main-container .know-more .right {
   display: flex;
@@ -351,4 +352,94 @@ body {
 }
 .main-container .know-more .right .special {
   margin-top: 5rem;
+}
+.main-container .serving {
+  margin-top: 5rem;
+}
+@media (max-width: 768px) {
+  .main-container .serving {
+    width: 80%;
+    margin: 0 10%;
+    margin-top: 3rem;
+    display: block;
+  }
+}
+.main-container .serving .top {
+  display: flex;
+  align-items: center;
+}
+.main-container .serving .top span {
+  color: #ffc492;
+}
+.main-container .serving .top .line {
+  width: 3rem;
+  height: 1px;
+  margin-left: 1rem;
+  background-color: #fff;
+}
+.main-container .serving .title {
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 1rem;
+  color: white;
+}
+@media (max-width: 768px) {
+  .main-container .serving .title {
+    display: block;
+  }
+}
+.main-container .serving .title h2 {
+  width: 50%;
+  font-size: 2.5rem;
+}
+@media (max-width: 768px) {
+  .main-container .serving .title h2 {
+    width: 100%;
+  }
+}
+.main-container .serving .title p {
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .main-container .serving .title p {
+    width: 100%;
+  }
+}
+.main-container .serving .service {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+}
+@media (max-width: 768px) {
+  .main-container .serving .service {
+    display: block;
+  }
+}
+.main-container .serving .service .card {
+  color: white;
+  width: 33%;
+  height: 300px;
+  background-color: #151217;
+  padding: 30px;
+}
+@media (max-width: 768px) {
+  .main-container .serving .service .card {
+    width: 100%;
+    height: 40%;
+  }
+}
+.main-container .serving .service .card .circle .bi {
+  font-size: 25px;
+  color: #ffc492;
+  padding: 8px;
+  border-radius: 50%;
+  background-color: brown;
+}
+.main-container .serving .service .card h1 {
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+.main-container .serving .service .card p {
+  font-weight: 300;
 }/*# sourceMappingURL=style.css.map */
