--- a/style.scss
+++ b/style.scss
@@ -140,7 +140,7 @@ body {
 }
 .main-container {
   margin: 5% 10% 0 10%;
-  @media (max-width:768px) {
+  @media (max-width: 768px) {
     margin: 0;
   }
   .header {
@@ -205,19 +205,19 @@ body {
           opacity: 0.5;
         }
       }
-      .overlay-hidden{
+      .overlay-hidden {
         display: none;
-        @media (max-width:768px) {
+        @media (max-width: 768px) {
           top: 0;
           display: block;
           position: absolute;
           overflow: hidden;
           height: 0;
           background-color: rgba(128, 128, 128, 0.5);
-          transition: .5s ease;
+          transition: 0.5s ease;
           width: 100%;
         }
-        .text{
+        .text {
           @media (max-width: 768px) {
             padding: 10px;
           }
@@ -225,12 +225,11 @@ body {
       }
     }
     @media (max-width: 768px) {
-      .right:hover .overlay-hidden{
+      .right:hover .overlay-hidden {
         height: 100%;
         bottom: 0;
       }
     }
-
 
     .hidden-content {
       display: none;
@@ -251,59 +250,58 @@ body {
       }
     }
   }
-  .know-more{
+  .know-more {
     color: white;
     margin-top: 5rem;
     display: flex;
     height: auto;
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       width: 80%;
       margin: 0 10%;
       margin-top: 3rem;
       display: block;
     }
-    .left{
+    .left {
       width: 50%;
       line-height: 1.5rem;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         width: 100%;
       }
-      .top{
+      .top {
         display: flex;
         align-items: center;
-        span{
+        span {
           color: #ffc492;
         }
-        .line{
+        .line {
           width: 3rem;
           height: 1px;
           margin-left: 1rem;
           background-color: #fff;
-      
         }
       }
-      h1{
+      h1 {
         margin-top: 2rem;
       }
-      .mid{
+      .mid {
         gap: 1rem;
         display: flex;
         margin-top: 1.5rem;
-        @media (max-width:768px) {
+        @media (max-width: 768px) {
           display: block;
         }
-        .item{
-          @media (max-width:768px) {
+        .item {
+          @media (max-width: 768px) {
             margin-top: 2rem;
           }
-          h3{
+          h3 {
             color: #b0eff1;
           }
-          .bi{
+          .bi {
             color: #ffc492;
           }
         }
-        p{
+        p {
           margin-top: 1rem;
         }
       }
@@ -313,27 +311,109 @@ body {
         background-color: #ffc492;
         padding: 10px 20px;
         font-weight: 600;
+        color: black;
       }
     }
-    .right{
+    .right {
       display: flex;
       width: 50%;
       justify-content: end;
       gap: 2rem;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         width: 80%;
         margin: 0 10%;
         justify-content: center;
       }
-      img{
+      img {
         object-fit: contain;
-        @media (max-width:768px) {
+        @media (max-width: 768px) {
           width: 50%;
         }
       }
-      
-      .special{
+
+      .special {
         margin-top: 5rem;
+      }
+    }
+  }
+  .serving{
+    margin-top: 5rem;
+    @media (max-width: 768px) {
+      width: 80%;
+      margin: 0 10%;
+      margin-top: 3rem;
+      display: block;
+    }
+    .top {
+      display: flex;
+      align-items: center;
+      span {
+        color: #ffc492;
+      }
+      .line {
+        width: 3rem;
+        height: 1px;
+        margin-left: 1rem;
+        background-color: #fff;
+      }
+    }
+    .title{
+      margin-top: 1.5rem;
+      display: flex;
+      gap: 1rem;
+      color: white;
+      @media (max-width:768px) {
+        display: block;
+      }
+      h2{
+        width: 50%;
+        font-size: 2.5rem;
+        @media (max-width:768px) {
+          width: 100%;
+        }
+      }
+      p{
+        width: 50%;
+        @media (max-width:768px) {
+          width: 100%;
+        }
+      }
+    }
+    .service{
+      margin-top: 3rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2px;
+      @media (max-width:768px) {
+        display: block;
+      }
+      .card{
+        color: white;
+        width: 33%;
+        height: 300px;
+        background-color: #151217;
+        padding: 30px;
+        @media (max-width: 768px) {
+          width: 100%;
+          height: 40%;
+        }
+        .circle{
+          .bi{
+            font-size: 25px;
+            color: #ffc492;
+            padding: 8px;
+            border-radius: 50%;
+            background-color: brown;
+          }
+        }
+
+        h1{
+          margin-top: 1rem;
+          font-size: 2rem;
+        }
+        p{
+          font-weight: 300;
+        }
       }
     }
   }
