--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,10 @@
 body {
   overflow-x: hidden;
   background-color: #19161b;
+  // font-family: Arial,sans-serif;
+  font-family: "Playfair Display", sans-serif;
 }
+
 .header {
   margin: 0;
   width: 100%;
@@ -9,7 +12,6 @@ body {
   left: 0;
   z-index: 999;
   .container {
-    margin: 0 10%;
     .navbar-toggler {
       border: none;
     }
@@ -139,7 +141,7 @@ body {
   }
 }
 .main-container {
-  margin: 5% 10% 0 10%;
+  margin-top: 5%;
   @media (max-width: 768px) {
     margin: 0;
   }
@@ -148,15 +150,18 @@ body {
     color: white;
     gap: 2rem;
     height: auto;
-
+    font-family: "Playfair Display", sans-serif;
     h1 {
       font-size: 56px;
+      font-weight: 600;
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
     @media (max-width: 768px) {
       display: block;
     }
     .left {
-      width: 50%;
       @media (max-width: 768px) {
         width: 80%;
         margin: 0 10%;
@@ -196,13 +201,18 @@ body {
       }
     }
     .right {
-      width: 50%;
       object-fit: cover;
       @media (max-width: 768px) {
         width: 100%;
         position: relative;
         img {
           opacity: 0.5;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          max-height: 32rem;
+          -o-object-fit: cover;
+          object-fit: cover;
         }
       }
       .overlay-hidden {
@@ -283,6 +293,9 @@ body {
       h1 {
         margin-top: 2rem;
       }
+      p {
+        color: #9d9999;
+      }
       .mid {
         gap: 1rem;
         display: flex;
@@ -303,15 +316,23 @@ body {
         }
         p {
           margin-top: 1rem;
+          color: #9d9999;
         }
       }
-      button {
-        margin-top: 2rem;
-        border: none;
-        background-color: #ffc492;
-        padding: 10px 20px;
-        font-weight: 600;
-        color: black;
+      .btn {
+        @media (max-width: 768px) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        button {
+          margin-top: 2rem;
+          border: none;
+          background-color: #ffc492;
+          padding: 10px 20px;
+          font-weight: 600;
+          color: black;
+        }
       }
     }
     .right {
@@ -336,7 +357,7 @@ body {
       }
     }
   }
-  .serving{
+  .serving {
     margin-top: 5rem;
     @media (max-width: 768px) {
       width: 80%;
@@ -357,37 +378,38 @@ body {
         background-color: #fff;
       }
     }
-    .title{
+    .title {
       margin-top: 1.5rem;
       display: flex;
       gap: 1rem;
       color: white;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         display: block;
       }
-      h2{
+      h2 {
         width: 50%;
-        font-size: 2.5rem;
-        @media (max-width:768px) {
+        font-size: 2rem;
+        @media (max-width: 768px) {
           width: 100%;
         }
       }
-      p{
+      p {
         width: 50%;
-        @media (max-width:768px) {
+        color: #9d9999;
+        @media (max-width: 768px) {
           width: 100%;
         }
       }
     }
-    .service{
+    .service {
       margin-top: 3rem;
       display: flex;
       flex-wrap: wrap;
       gap: 2px;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         display: block;
       }
-      .card{
+      .card {
         color: white;
         width: 33%;
         height: 300px;
@@ -397,8 +419,8 @@ body {
           width: 100%;
           height: 40%;
         }
-        .circle{
-          .bi{
+        .circle {
+          .bi {
             font-size: 25px;
             color: #ffc492;
             padding: 8px;
@@ -407,14 +429,245 @@ body {
           }
         }
 
-        h1{
+        h1 {
           margin-top: 1rem;
           font-size: 2rem;
         }
-        p{
+        p {
           font-weight: 300;
+          color: #9d9999;
         }
       }
+    }
+  }
+  .our-menu {
+    margin-top: 3rem;
+    color: white;
+    @media (max-width: 768px) {
+      width: 80%;
+      margin: 0 10%;
+      margin-top: 3rem;
+    }
+    .top {
+      display: flex;
+      align-items: center;
+      span {
+        color: #ffc492;
+      }
+      .line {
+        width: 3rem;
+        height: 1px;
+        margin-left: 1rem;
+        background-color: #fff;
+      }
+    }
+    .title {
+      display: flex;
+      line-height: 1.6;
+      margin-bottom: 1rem;
+      @media (max-width: 768px) {
+        display: block;
+      }
+      .left {
+        width: 50%;
+        @media (max-width: 768px) {
+          width: 100%;
+          margin-top: 1rem;
+        }
+        h1 {
+          font-weight: 600;
+          font-size: 2rem;
+        }
+        span {
+          color: #b0eff1;
+        }
+      }
+      .right {
+        width: 50%;
+        @media (max-width: 768px) {
+          width: 100%;
+          margin-top: 1rem;
+        }
+        p {
+          color: #9d9999;
+        }
+      }
+    }
+    .menu {
+      .row {
+        margin-top: 1rem;
+        @media (max-width: 768px) {
+          margin-top: 0;
+        }
+        img {
+          width: 100%;
+          max-height: 16rem;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
+        .title {
+          display: flex;
+          justify-content: space-between;
+          padding: 1.5rem;
+          background: #34292d;
+          font-size: 1.25rem;
+          line-height: 1.5;
+          font-weight: 500;
+        }
+      }
+    }
+    .btn {
+      @media (max-width: 768px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      width: 100%;
+      button {
+        margin-top: 1rem;
+        border: none;
+        background-color: #ffc492;
+        padding: 10px 20px;
+        font-weight: 600;
+        color: black;
+      }
+    }
+  }
+}
+.quote {
+  margin-top: 3rem;
+  color: white;
+  display: flex;
+  background: #1f1d21;
+  width: 100%;
+  @media (max-width: 768px) {
+    display: block;
+  }
+  .left {
+    width: 40%;
+    padding: 2rem 2.5rem;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+    h1 {
+      font-weight: 700;
+      font-size: 5rem;
+    }
+    span {
+      color: #9d9999;
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+
+    .author {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: space-between;
+      .avatar {
+        overflow: hidden;
+        width: 3rem;
+        height: 3rem;
+        border-radius: 1.5rem;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
+      }
+      p {
+        color: #9d9999;
+        font-weight: 400;
+      }
+    }
+  }
+  .right {
+    overflow: hidden;
+    width: 60%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+    img {
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      max-height: 32rem;
+      transition: transform 0.5s;
+      transform-origin: center center;
+    }
+    img:hover {
+      transform: scale(1.1);
+      overflow: hidden;
+    }
+    .bi {
+      position: absolute;
+      cursor: pointer;
+      z-index: 2;
+      display: inline-block;
+      max-width: 100%;
+
+      font-size: 3rem;
+      background-color: white;
+      color: black;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5px;
+    }
+  }
+}
+.blog{
+  color: white;
+  margin-top: 3rem;
+  h1{
+    width: 100%;
+    max-width: 20rem;
+    font-size: 3rem;
+    line-height: 1.2;
+    font-weight: 600;
+  }
+  .wrap{
+    display: flex;
+    gap: 1.5rem;
+    @media (max-width: 768px) {
+      overflow: hidden;
+    }
+    .card{
+      background: #151217;
+      @media (max-width: 768px) {
+        min-width: 100%!important;
+      }
+      .card-body{
+      }
+      .image{
+        width: 100%;
+        img{
+          width: 100%;
+          max-height: 16rem;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+  .hidden-content{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    font-size: 2rem;
+    color: #9d9999;
+    margin: 5% 0;
+    display: none;
+    @media (max-width: 768px) {
+      display: flex;
     }
   }
 }
