--- a/style.scss
+++ b/style.scss
@@ -11,9 +11,37 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
+  @media (max-width:768px) {
+    position: relative;
+  }
   .container {
+    @media (max-width:768px) {
+      position: relative;
+    }
     .navbar-toggler {
       border: none;
+    }
+    .dropdown{
+      display: none;
+      position: relative;
+      button{
+        background: none;
+      }
+      .dropdown-menu{
+        height: 50vh;
+        width: 95vw;
+        position: absolute;
+        right: -2px;
+        z-index: 99999;
+        background-color: #19161b;
+        .dropdown-item{
+          z-index: 999999;
+          color: white;
+        }
+      }
+      @media (max-width:768px) {
+        display: block;
+      }
     }
     .bi {
       color: white;
@@ -151,6 +179,7 @@ body {
     gap: 2rem;
     height: auto;
     font-family: "Playfair Display", sans-serif;
+    z-index: 0;
     h1 {
       font-size: 56px;
       font-weight: 600;
@@ -162,12 +191,14 @@ body {
       display: block;
     }
     .left {
+      width: 50%;
       @media (max-width: 768px) {
         width: 80%;
         margin: 0 10%;
       }
       .text {
         margin: 10% 0;
+        z-index: 0;
         h1 {
           font-family: "Playfair Display", sans-serif;
         }
