--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   background: none;
 }
 .header .container .dropdown .dropdown-menu {
-  height: 50vh;
+  height: 55vh;
   width: 95vw;
   position: absolute;
   right: -2px;
@@ -42,6 +42,8 @@ body {
 .header .container .dropdown .dropdown-menu .dropdown-item {
   z-index: 999999;
   color: white;
+  font-weight: 600;
+  margin-top: 1rem;
 }
 @media (max-width: 768px) {
   .header .container .dropdown {
