--- a/style.scss
+++ b/style.scss
@@ -28,15 +28,18 @@ body {
         background: none;
       }
       .dropdown-menu{
-        height: 50vh;
+        height: 55vh;
         width: 95vw;
         position: absolute;
         right: -2px;
         z-index: 99999;
         background-color: #19161b;
+        
         .dropdown-item{
           z-index: 999999;
           color: white;
+          font-weight: 600;
+          margin-top: 1rem;
         }
       }
       @media (max-width:768px) {
