--- a/style.scss
+++ b/style.scss
@@ -11,44 +11,42 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
-  @media (max-width:768px) {
+  @media (max-width: 768px) {
     position: relative;
   }
   .container {
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       position: relative;
     }
     .navbar-toggler {
       border: none;
     }
-    .dropdown{
+    .dropdown {
       display: none;
       position: relative;
-      button{
+      button {
         background: none;
       }
-      .dropdown-menu{
-        
+      .dropdown-menu {
         height: 55vh;
         width: 95vw;
         position: absolute;
         right: -2px;
         z-index: 99999;
         background-color: #19161b;
-        
-        .dropdown-item{
+
+        .dropdown-item {
           z-index: 999999;
           color: white;
           font-weight: 600;
           margin-top: 1rem;
         }
       }
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         display: block;
       }
     }
     .dropdown:hover .dropdown-menu {
-
       animation: fadeIn 0.5s ease forwards;
       @keyframes fadeIn {
         from {
@@ -391,7 +389,7 @@ body {
       width: 50%;
       justify-content: end;
       gap: 2rem;
-      
+
       @media (max-width: 768px) {
         width: 80%;
         margin: 0 10%;
@@ -472,6 +470,8 @@ body {
           height: 40%;
         }
         .circle {
+          display: flex;
+          align-items: center;
           .bi {
             font-size: 25px;
             color: #ffc492;
@@ -760,10 +760,10 @@ body {
       width: 100%;
       padding: 2rem;
     }
-    h3{
+    h3 {
       font-size: 1rem;
     }
-    p{
+    p {
       color: #9d9999;
     }
   }
@@ -774,21 +774,22 @@ body {
     }
   }
 }
-.footer{
+.footer {
   color: white;
   margin-top: 5rem;
-  .top{
-    font-family: Arial,sans-serif;
+  .top {
+    font-family: Arial, sans-serif;
     width: 100%;
     text-align: center;
-    h2{
+    h2 {
       font-weight: 700;
       color: #ffc492;
       cursor: pointer;
+      font-size: 1.5rem;
     }
   }
-  .menu{
-    font-family: Arial,sans-serif;
+  .menu {
+    font-family: Arial, sans-serif;
     margin-top: 2rem;
     text-align: center;
     width: 100%;
@@ -796,49 +797,70 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       display: block;
     }
-    p{
+    p {
       cursor: pointer;
       color: #9d9999;
       font-weight: 600;
     }
-    p:hover{
+    p:hover {
       color: #ffc492;
     }
-
   }
-  .line{
-    border-top: solid 2px #9d9999;
-    height: 2px;
+}
+.line {
+  border-top: solid 1px #9d9999;
+  height: 2px;
+  width: 100%;
+  margin-top: 1rem;
+}
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  @media (max-width: 768px) {
+    display: block;
     width: 100%;
-    margin-top: 1rem;
+    text-align: center;
   }
-  .bottom{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+  .title {
+    width: 33%;
     @media (max-width: 768px) {
-      display: block;
       width: 100%;
-      text-align: center;
     }
-    span{
-      color: #9d9999;
-      @media (max-width:768px) {
-        
-      }
+  }
+  span {
+    color: #9d9999;
+    @media (max-width: 768px) {
+      width: 100%;
     }
-    .icon{
+  }
+  .icon {
+
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+    font-size: 1.5rem;
+    width: 33%;
+    text-align: center;
+    color: #9d9999;
+    @media (max-width: 768px) {
+      justify-content: center;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      width: 100%;
+    }
+    .bottom-of-bottom {
+      font-weight: 700;
       display: flex;
-      gap: 1rem;
-      font-size: 1.5rem;
-      color: #9d9999;
+      align-items: center;
+      width: 33%;
+      justify-content: end;
       @media (max-width:768px) {
+        width: 100%;
         justify-content: center;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
       }
     }
   }
