--- a/style.scss
+++ b/style.scss
@@ -817,6 +817,7 @@ body {
   margin-top: 1rem;
 }
 .bottom {
+  margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
