--- a/style.css
+++ b/style.css
@@ -253,6 +253,11 @@ body {
   padding: 10px 20px;
   font-weight: 600;
 }
+.main-container .header .left button:hover {
+  background: #27252d;
+  color: white;
+  transition: 0.5s;
+}
 .main-container .header .right {
   -o-object-fit: cover;
      object-fit: cover;
@@ -316,6 +321,11 @@ body {
     padding: 10px 20px;
     font-weight: 600;
     color: black;
+  }
+  .main-container .header .hidden-content button:hover {
+    background: #27252d;
+    color: white;
+    transition: 0.5s;
   }
 }
 .main-container .know-more {
@@ -401,6 +411,11 @@ body {
   font-weight: 600;
   color: black;
 }
+.main-container .know-more .left .btn button:hover {
+  background: #27252d;
+  color: white;
+  transition: 0.5s;
+}
 .main-container .know-more .right {
   position: relative;
   display: flex;
@@ -481,6 +496,8 @@ body {
   }
 }
 .main-container .serving .service {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
   margin-top: 3rem;
   display: flex;
   flex-wrap: wrap;
@@ -524,6 +541,8 @@ body {
   color: #9d9999;
 }
 .main-container .our-menu {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   margin-top: 3rem;
   color: white;
 }
@@ -626,9 +645,14 @@ body {
   font-weight: 600;
   color: black;
 }
+.main-container .our-menu .btn button:hover {
+  transition: 0.5s;
+  background: #27252d;
+  color: white;
+}
 
 .quote {
-  margin-top: 3rem;
+  margin-top: 6rem;
   color: white;
   display: flex;
   background: #1f1d21;
@@ -679,6 +703,21 @@ body {
   color: #9d9999;
   font-weight: 400;
 }
+.quote .left .line {
+  border-top: solid 1px hsla(0, 0%, 100%, 0.24);
+  height: 2px;
+  width: 100%;
+  margin-top: 1rem;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.quote .left .line .avatar-line {
+  width: 3rem;
+  height: 0.125rem;
+  background-color: #fff;
+}
 .quote .right {
   overflow: hidden;
   width: 60%;
@@ -723,15 +762,22 @@ body {
 }
 
 .blog {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   color: white;
   margin-top: 3rem;
 }
 .blog h1 {
-  width: 100%;
-  max-width: 20rem;
+  max-width: 60%;
   font-size: 3rem;
   line-height: 1.2;
   font-weight: 600;
+  padding-bottom: 1rem;
+}
+@media (max-width: 768px) {
+  .blog h1 {
+    font-size: 2rem;
+  }
 }
 .blog .wrap-slide {
   display: flex;
