--- a/style.scss
+++ b/style.scss
@@ -246,6 +246,11 @@ body {
         padding: 10px 20px;
         font-weight: 600;
       }
+      button:hover {
+        background: #27252d;
+        color: white;
+        transition: 0.5s;
+      }
     }
     .right {
       object-fit: cover;
@@ -303,6 +308,11 @@ body {
           padding: 10px 20px;
           font-weight: 600;
           color: black;
+        }
+        button:hover {
+          background: #27252d;
+          color: white;
+          transition: 0.5s;
         }
       }
     }
@@ -381,6 +391,11 @@ body {
           font-weight: 600;
           color: black;
         }
+        button:hover {
+          background: #27252d;
+          color: white;
+          transition: 0.5s;
+        }
       }
     }
     .right {
@@ -452,6 +467,8 @@ body {
       }
     }
     .service {
+      padding-top: 3rem;
+      padding-bottom: 6rem;
       margin-top: 3rem;
       display: flex;
       flex-wrap: wrap;
@@ -493,6 +510,8 @@ body {
     }
   }
   .our-menu {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
     margin-top: 3rem;
     color: white;
     @media (max-width: 768px) {
@@ -583,11 +602,16 @@ body {
         font-weight: 600;
         color: black;
       }
+      button:hover {
+        transition: 0.5s;
+        background: #27252d;
+        color: white;
+      }
     }
   }
 }
 .quote {
-  margin-top: 3rem;
+  margin-top: 6rem;
   color: white;
   display: flex;
   background: #1f1d21;
@@ -633,6 +657,21 @@ body {
         font-weight: 400;
       }
     }
+    .line {
+      border-top: solid 1px hsla(0, 0%, 100%, 0.24);
+      height: 2px;
+      width: 100%;
+      margin-top: 1rem;
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .avatar-line {
+        width: 3rem;
+        height: 0.125rem;
+        background-color: #fff;
+      }
+    }
   }
   .right {
     overflow: hidden;
@@ -676,14 +715,19 @@ body {
   }
 }
 .blog {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   color: white;
   margin-top: 3rem;
   h1 {
-    width: 100%;
-    max-width: 20rem;
+    max-width: 60%;
     font-size: 3rem;
     line-height: 1.2;
     font-weight: 600;
+    padding-bottom: 1rem;
+    @media (max-width: 768px) {
+      font-size: 2rem;
+    }
   }
   .wrap-slide {
     display: flex;
@@ -839,7 +883,6 @@ body {
     }
   }
   .icon {
-
     align-items: center;
     display: flex;
     gap: 1rem;
@@ -859,7 +902,7 @@ body {
       align-items: center;
       width: 33%;
       justify-content: end;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         width: 100%;
         justify-content: center;
       }
