--- a/style.scss
+++ b/style.scss
@@ -522,6 +522,7 @@ body {
     .top {
       display: flex;
       align-items: center;
+      padding-bottom: 2rem;
       span {
         color: #ffc492;
       }
