--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ body {
   color: #ffc492;
   padding: 8px;
   border-radius: 50%;
-  background-color: brown;
+  background-color: #261e1d;
 }
 .main-container .serving .service .card h1 {
   margin-top: 1rem;
