--- a/style.scss
+++ b/style.scss
@@ -494,7 +494,7 @@ body {
             color: #ffc492;
             padding: 8px;
             border-radius: 50%;
-            background-color: brown;
+            background-color: #261e1d;
           }
         }
 
