--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   background: none;
 }
 .header .container .dropdown .dropdown-menu {
-  height: 55vh;
+  height: auto;
   width: 95vw;
   position: absolute;
   right: -2px;
