--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ body {
         background: none;
       }
       .dropdown-menu {
-        height: 55vh;
+        height: auto;
         width: 95vw;
         position: absolute;
         right: -2px;
