--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body {
 
 .main-container {
   margin-top: 5%;
+  padding-bottom: 2rem;
 }
 @media (max-width: 768px) {
   .main-container {
@@ -331,14 +332,14 @@ body {
 .main-container .know-more {
   position: relative;
   color: white;
-  margin-top: 5rem;
+  padding-top: 6rem;
+  padding-bottom: 3rem;
   display: flex;
   height: auto;
 }
 @media (max-width: 768px) {
   .main-container .know-more {
     width: 100%;
-    margin-top: 3rem;
     display: block;
   }
 }
@@ -545,13 +546,11 @@ body {
 .main-container .our-menu {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  margin-top: 3rem;
   color: white;
 }
 @media (max-width: 768px) {
   .main-container .our-menu {
     width: 100%;
-    margin-top: 3rem;
   }
 }
 .main-container .our-menu .top {
