--- a/style.scss
+++ b/style.scss
@@ -186,6 +186,7 @@ body {
 }
 .main-container {
   margin-top: 5%;
+  padding-bottom: 2rem;
   @media (max-width: 768px) {
     margin: 0;
   }
@@ -320,12 +321,13 @@ body {
   .know-more {
     position: relative;
     color: white;
-    margin-top: 5rem;
+    padding-top: 6rem;
+    padding-bottom: 3rem;
     display: flex;
     height: auto;
     @media (max-width: 768px) {
       width: 100%;
-      margin-top: 3rem;
+
       display: block;
     }
     .left {
@@ -512,11 +514,9 @@ body {
   .our-menu {
     padding-top: 6rem;
     padding-bottom: 6rem;
-    margin-top: 3rem;
     color: white;
     @media (max-width: 768px) {
       width: 100%;
-      margin-top: 3rem;
     }
     .top {
       display: flex;
