--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ body {
 .main-container .know-more .left .top .line {
   width: 3rem;
   height: 1px;
+  margin: 0;
   margin-left: 1rem;
   background-color: #fff;
 }
@@ -466,8 +467,9 @@ body {
 .main-container .serving .top .line {
   width: 3rem;
   height: 1px;
-  margin-left: 1rem;
   background-color: #fff;
+  margin: 0;
+  margin-left: 1rem;
 }
 .main-container .serving .title {
   margin-top: 1.5rem;
@@ -562,10 +564,15 @@ body {
   color: #ffc492;
 }
 .main-container .our-menu .top .line {
+  margin: 0;
   width: 3rem;
   height: 1px;
   margin-left: 1rem;
   background-color: #fff;
+  display: flex;
+  align-items: center;
+  display: flex;
+  text-align: center;
 }
 .main-container .our-menu .title {
   display: flex;
