--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ body {
 .main-container .our-menu .title {
   display: flex;
   line-height: 1.6;
-  margin-bottom: 1rem;
+  padding-bottom: 3rem;
 }
 @media (max-width: 768px) {
   .main-container .our-menu .title {
@@ -596,6 +596,12 @@ body {
 .main-container .our-menu .title .left h1 {
   font-weight: 600;
   font-size: 2rem;
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .main-container .our-menu .title .left h1 {
+    width: 100%;
+  }
 }
 .main-container .our-menu .title .left span {
   color: #b0eff1;
