--- a/style.scss
+++ b/style.scss
@@ -638,106 +638,115 @@ body {
 .quote {
   margin-top: 6rem;
   color: white;
-  display: flex;
+
   background: #1f1d21;
   width: 100%;
-  @media (max-width: 768px) {
-    display: block;
-  }
-  .left {
-    width: 40%;
-    padding: 2rem 2.5rem;
-    @media (max-width: 768px) {
-      width: 100%;
-    }
-    h1 {
-      font-weight: 700;
-      font-size: 5rem;
-    }
-    span {
-      color: #9d9999;
-      font-size: 1.5rem;
-      font-weight: 500;
-    }
 
-    .author {
-      margin-top: 2rem;
-      display: flex;
-      justify-content: space-between;
-      .avatar {
-        overflow: hidden;
-        width: 3rem;
-        height: 3rem;
-        border-radius: 1.5rem;
-        img {
-          width: 100%;
-          height: 100%;
-          border-radius: 50%;
-          -o-object-fit: cover;
-          object-fit: cover;
+  .container{
+    display: flex;
+
+    @media (max-width: 768px) {
+      display: block;
+
+    }
+    .left {
+      width: 40%;
+      padding: 2rem 0;
+      padding-right: 2.5rem;
+      @media (max-width: 768px) {
+        width: 100%;
+        padding-right: 0;
+      }
+      h1 {
+        font-weight: 700;
+        font-size: 5rem;
+      }
+      span {
+        color: #9d9999;
+        font-size: 1.5rem;
+        font-weight: 500;
+      }
+  
+      .author {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: space-between;
+        .avatar {
+          overflow: hidden;
+          width: 3rem;
+          height: 3rem;
+          border-radius: 1.5rem;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            -o-object-fit: cover;
+            object-fit: cover;
+          }
+        }
+        p {
+          color: #9d9999;
+          font-weight: 400;
         }
       }
-      p {
-        color: #9d9999;
-        font-weight: 400;
+      .line {
+        border-top: solid 1px hsla(0, 0%, 100%, 0.24);
+        height: 2px;
+        width: 100%;
+        margin-top: 1rem;
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        .avatar-line {
+          width: 3rem;
+          height: 0.125rem;
+          background-color: #fff;
+        }
       }
     }
-    .line {
-      border-top: solid 1px hsla(0, 0%, 100%, 0.24);
-      height: 2px;
-      width: 100%;
-      margin-top: 1rem;
+    .right {
+      overflow: hidden;
+      width: 60%;
+      display: flex;
       position: relative;
-      display: flex;
-      justify-content: flex-end;
       align-items: center;
-      .avatar-line {
-        width: 3rem;
-        height: 0.125rem;
-        background-color: #fff;
+      justify-content: center;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+      img {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        max-height: 32rem;
+        transition: transform 0.5s;
+        transform-origin: center center;
+        object-fit: cover;
+      }
+      img:hover {
+        transform: scale(1.1);
+        overflow: hidden;
+      }
+      .bi {
+        position: absolute;
+        cursor: pointer;
+        z-index: 2;
+        display: inline-block;
+        max-width: 100%;
+  
+        font-size: 3rem;
+        background-color: white;
+        color: black;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
       }
     }
   }
-  .right {
-    overflow: hidden;
-    width: 60%;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    @media (max-width: 768px) {
-      width: 100%;
-    }
-    img {
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-      max-height: 32rem;
-      transition: transform 0.5s;
-      transform-origin: center center;
-      object-fit: cover;
-    }
-    img:hover {
-      transform: scale(1.1);
-      overflow: hidden;
-    }
-    .bi {
-      position: absolute;
-      cursor: pointer;
-      z-index: 2;
-      display: inline-block;
-      max-width: 100%;
 
-      font-size: 3rem;
-      background-color: white;
-      color: black;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 5px;
-    }
-  }
 }
 .blog {
   padding-top: 6rem;
