--- a/menu.scss
+++ b/menu.scss
@@ -187,7 +187,7 @@ body {
 }
 .our-menu {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 2rem;
   color: white;
   @media (max-width: 768px) {
     width: 100%;
@@ -281,9 +281,16 @@ body {
     gap: 1.3%;
     display: flex;
     flex-wrap: wrap;
+    @media (max-width:768px) {
+      display: block;
+      flex-wrap: nowrap;
+    }
     .item-menu{
       width: 32%;
       margin-top: 1rem;
+      @media (max-width:768px) {
+        width: 100%;
+      }
       img {
         width: 100%;
         max-height: 16rem;
@@ -298,6 +305,10 @@ body {
         font-size: 1.25rem;
         line-height: 1.5;
         font-weight: 500;
+
+        @media (max-width:768px) {
+          display: block;
+        }
         .price {
           font-family: "Poppins";
         }
@@ -357,7 +368,7 @@ body {
   }
 }
 .map {
-  margin-top: 5rem;
+  margin-top: 2rem;
   color: white;
   display: flex;
   width: 100%;
