--- a/menu.scss
+++ b/menu.scss
@@ -11,6 +11,7 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
+  font-family: 'Poppins';
   @media (max-width: 768px) {
     position: relative;
   }
